--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -10,7 +10,7 @@
   color: #000 !important;
   /* padding: 10px 20px !important; */
   margin-right: 10px;
-  font-size: .8em;
+  /* font-size: .8em; */
   /* background: #051A52; */
 
 }
