--- a/src/assets/css/homepage.css
+++ b/src/assets/css/homepage.css
@@ -158,3 +158,20 @@
 .s3-para {
   font-size: 18px;
 }
+
+search-placeholder::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1;
+  /* Firefox */
+}
+
+search-placeholder:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: red;
+}
+
+search-placeholder::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: red;
+}
