--- a/src/assets/css/homepage.css
+++ b/src/assets/css/homepage.css
@@ -203,3 +203,25 @@ p.tip:hover span {
   text-decoration: none;
   border-radius: 10%;
 }
+.card-hover{
+   transition: box-shadow 0.2s ease-in-out, transform 0.35s ease-in-out;
+}
+.card-hover:hover{
+  box-shadow: 0 11px 11px 0 rgba(0, 0, 0,.16) !important;
+  transform: translateY(-5px) !important;
+}
+
+.btn-hover{
+transition: 0.25s;;
+}
+.btn-hover:hover{
+    box-shadow: 0 0.5em 0.5em -0.4em rgba(0, 0, 0,.16);
+  transform: translateY(-0.25em);
+}
+
+.text-hover{
+  color: #677788;
+}
+.text-hover:hover{
+  color: #041237;
+}
